--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "outputDirectory": "docs/.vuepress/dist"
+  "buildCommand": "npm run docs:build",
+  "outputDirectory": "docs/.vuepress/dist",
+  "installCommand": "npm install"
 }
